src/objects/TIMBASURVEYS__SurveyRelationship__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>TIMBASURVEYS__Recipient__c</referenceTo>
        <relationshipLabel>SurveyRelationship</relationshipLabel>
        <relationshipName>SurveyRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SingleRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SingleRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>SurveyRelationship</relationshipLabel>
        <relationshipName>SurveyRelationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SurveyRelationship</label>
    <nameField>
        <label>SurveyRelationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyRelationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>